--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -9,4 +9,4 @@ cacheMaxDays: 30
 
 # cacheUrl: https://GITHUB_USERNAME.github.io/REPO_NAME/cache.json
 sources:
-  - href: https://web3cave.github.io/flat-data-template/data.xml
+  - href: https://weekinethereumnews.com/feed/
